--- a/app/src/main/res/layout/artiste_details_fragment.xml
+++ b/app/src/main/res/layout/artiste_details_fragment.xml
@@ -139,7 +139,7 @@
                             android:text="horaire de passage"
                             android:textAlignment="center"
                             android:textSize="20sp"
-                            app:layout_constraintBottom_toTopOf="@+id/videoView3"
+                            app:layout_constraintBottom_toTopOf="@+id/artisteVideo"
                             app:layout_constraintEnd_toStartOf="@+id/secondeHorraire"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView"
@@ -154,12 +154,12 @@
                             android:layout_marginBottom="22dp"
                             android:text="_2_eme_horraire"
                             android:textSize="20sp"
-                            app:layout_constraintBottom_toTopOf="@+id/videoView3"
+                            app:layout_constraintBottom_toTopOf="@+id/artisteVideo"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toBottomOf="@+id/textView" />
 
                         <VideoView
-                            android:id="@+id/videoView3"
+                            android:id="@+id/artisteVideo"
                             android:layout_width="242dp"
                             android:layout_height="146dp"
                             android:layout_marginStart="85dp"
