--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -70,31 +70,55 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageButton
+                android:id="@+id/stand_find_button"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:background="@null"
+                android:clickable="true"
+                android:src="@drawable/crosshairs_gps"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
             <TextView
                 android:id="@+id/stand_titre"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="50dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginEnd="50dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.43"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/stand_close_button" />
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                app:layout_constraintEnd_toStartOf="@+id/stand_close_button"
+                app:layout_constraintStart_toEndOf="@+id/stand_find_button"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/editTextTextMultiLine"
+            <TextView
+                android:id="@+id/textviewServices"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:clickable="false"
-                android:duplicateParentState="false"
-                android:editable="false"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
+                android:text="Services :"
+                app:layout_constraintStart_toEndOf="@+id/stand_find_button"
+                app:layout_constraintTop_toBottomOf="@+id/stand_titre"></TextView>
+
+            <ScrollView
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginTop="4dp"
+                android:maxHeight="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/stand_titre" />
+                app:layout_constraintEnd_toStartOf="@+id/stand_close_button"
+                app:layout_constraintStart_toEndOf="@+id/stand_find_button"
+                app:layout_constraintTop_toBottomOf="@+id/textviewServices">
+
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/stand_chipGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    />
+            </ScrollView>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
