--- a/app/src/main/res/layout/news_details_fragment.xml
+++ b/app/src/main/res/layout/news_details_fragment.xml
@@ -27,7 +27,7 @@
                     android:layout_width="9dp"
                     android:layout_height="0dp"
                     android:layout_marginStart="10dp"
-                    android:background="@drawable/news_side_bar"
+                    android:background="@drawable/simple_rect"
                     app:layout_constraintBottom_toBottomOf="@+id/actu_title"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/actu_title" />
