--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -67,7 +67,18 @@
         android:id="@+id/navigation_programmation"
         android:name="com.example.fimudroid.ui.planning.PlanningFragment"
         android:label="fragment_planning"
-        tools:layout="@layout/fragment_planning" />
+        tools:layout="@layout/fragment_planning" >
+        <action
+            android:id="@+id/action_programmation_to_artisteDetails"
+            app:destination="@id/artisteDetailsFragment" >
+            <argument
+                android:name="itemId"
+                android:defaultValue="-1" />
+        </action>
+        <argument
+            android:name="artisteId"
+            app:argType="integer" />
+    </fragment>
     <fragment
         android:id="@+id/navigation_plan"
         android:name="com.example.fimudroid.MapFragment"
